Calculator By Zeeshan_Arish

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Calculator- By Zeeshan Khan</title>
+    <link rel="shortcut Icon"  href="./logo/th (2).jpeg"  >
   </head>
   <body>
     <div class="main">
-      <h1>Calculator- By Zeeshan Khan</h1>
+      <div class="img"></div><a href="./Zeeshan Khan(GenAI Engineer).pdf"><img src="./hero_img/C-removebg-preview.png" alt=""><a>
       <div class="calculator">
         <input type="text" placeholder="0" id="inputBox" />
         <div>
