Calculator By Zeeshan_Arish

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   </head>
   <body>
     <div class="main">
-      <div class="img"></div><a href="./Zeeshan Khan(GenAI Engineer).pdf"><img src="./hero_img/C-removebg-preview.png" alt=""><a>
+      <div class="img"><a target="_blank" href="./Zeeshan Khan(GenAI Engineer).pdf"><img src="./hero_img/C-removebg-preview.png" alt=""><a>
+      </div>  
       <div class="calculator">
         <input type="text" placeholder="0" id="inputBox" />
         <div>
