Calculator By Zeeshan_Arish

--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
   </head>
   <body>
     <div class="main">
-      <div class="img"><a target="_blank" href="./Zeeshan Khan(GenAI Engineer).pdf"><img src="./hero_img/C-removebg-preview.png" alt=""><a>
-      </div>  
+      <div class="hero_img">
+          <img src="./hero_img/C-removebg-preview.png" alt="">
+          <a target="_blank" href="./Zeeshan Khan(GenAI Engineer).pdf">My Resume</a>
+      </div>
+      <div class="separation">
+
+      </div>
       <div class="calculator">
         <input type="text" placeholder="0" id="inputBox" />
         <div>
-          <button class="operator">AC</button>
-          <button class="operator">DEL</button>
+          <button class="operator red_operator_button">AC</button>
+          <button class="operator red_operator_button">DEL</button>
           <button class="operator">%</button>
           <button class="operator">/</button>
         </div>
